// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleItem /> \`duplicate rule\` button should create a new rule, close the current one and open the new one 1`] = `
Array [
  Array [
    Array [
      1,
      2,
    ],
  ],
]
`;

exports[`<RuleItem /> \`reset rule\` button should reset event types 1`] = `
<tr
  class="container container"
  data-id="1"
  id="1"
>
  <td
    colspan="3"
  >
    <div
      class="row"
    >
      <div
        class="col left-col"
      >
        <i
          class="material-icons closeRuleIcon"
        >
          keyboard_arrow_down
        </i>
      </div>
      <div
        class="col center-col"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-1"
        >
          <input
            class="name component form-control-md form-control"
            placeholder="Name"
            tabindex="1"
            type="text"
            value="my rule"
          />
        </div>
        <div
          class="mb-0 form-group"
        >
          <div
            class="InputField rule-description form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-4"
                placeholder="Description"
                rows="1"
              >
                foo
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col right-col position-relative"
      >
        <label
          class="switch"
        >
          <input
            checked=""
            readonly=""
            type="checkbox"
          />
          <div
            class="slider"
          />
        </label>
        <div
          class="confirmation-popover"
          id="rule-toggle-1"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="full-width"
      >
        <form
          class=""
          id="rule-form-1"
        >
          <div
            class="mb-1 form-group"
          >
            <div
              class="when-container"
            >
              <div
                class="when-btn"
              >
                WHEN
              </div>
              <div
                class="MultiSelectField when-events"
              >
                <div
                  class="select MultiSelectFieldOpts"
                >
                  <span
                    class="tag badge badge-secondary"
                    style="color: rgb(2, 117, 216);"
                  >
                    <span>
                      <span
                        class="badgeText"
                      >
                        ticket created
                      </span>
                      <i
                        class="material-icons ml-1 badgeClose"
                      >
                        close
                      </i>
                    </span>
                  </span>
                  <span
                    class="tag badge badge-secondary"
                    style="color: rgb(2, 117, 216);"
                  >
                    <span>
                      <span
                        class="badgeText"
                      >
                        ticket updated
                      </span>
                      <i
                        class="material-icons ml-1 badgeClose"
                      >
                        close
                      </i>
                    </span>
                  </span>
                  <div
                    class="input-container"
                  >
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <input
                          class="input ml-2"
                          placeholder="Add events..."
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            ticket assigned to user
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            ticket snooze delay ends
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            new message in ticket
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Program-wrapper"
            >
              <div
                class="consequent"
              >
                <span
                  class=""
                >
                  <div
                    class="btn-group"
                    style="padding-left: 59px;"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ControlStructureButton dropdown-toggle btn btn-secondary"
                      type="button"
                    >
                      THEN
                    </button>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        Action
                      </button>
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        "IF" statement
                      </button>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="btn btn-success"
            form="rule-form-1"
            id="rule-item-save-1"
            type="submit"
          >
            Save rule
          </button>
          <button
            class="ml-3 btn btn-secondary"
            id="rule-item-duplicate-1"
            type="submit"
          >
            Duplicate rule
          </button>
          <div
            class="component d-inline-block ml-3"
            id="rule-item-discard-1"
          >
            <button
              class="loading btn-loading btn btn-secondary disabled"
              disabled=""
              id="confirm-button-rule-item-discard-1"
              type="button"
            >
              Discard changes
            </button>
          </div>
        </div>
        <div>
          <div
            class="component d-inline-block ml-2 delete-button"
            id="rule-item-delete-1"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-delete-1"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
              Delete rule
            </button>
          </div>
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`<RuleItem /> rendering should disable buttons when name is empty and render an error message 1`] = `
<button
  class="btn btn-success disabled"
  disabled=""
  form="rule-form-1"
  id="rule-item-save-1"
  type="submit"
>
  Save rule
</button>
`;

exports[`<RuleItem /> rendering should disable buttons when name is empty and render an error message 2`] = `
<button
  class="ml-3 btn btn-secondary disabled"
  disabled=""
  id="rule-item-duplicate-1"
  type="submit"
>
  Duplicate rule
</button>
`;

exports[`<RuleItem /> rendering should not render an error message when there is a least one trigger selected 1`] = `
<tr
  class="container container"
  data-id="1"
  id="1"
>
  <td
    colspan="3"
  >
    <div
      class="row"
    >
      <div
        class="col left-col"
      >
        <i
          class="material-icons closeRuleIcon"
        >
          keyboard_arrow_down
        </i>
      </div>
      <div
        class="col center-col"
      >
        <div
          class="d-flex justify-content-between align-items-center mb-1"
        >
          <input
            class="name component form-control-md form-control"
            placeholder="Name"
            tabindex="1"
            type="text"
            value="my rule"
          />
        </div>
        <div
          class="mb-0 form-group"
        >
          <div
            class="InputField rule-description form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-2"
                placeholder="Description"
                rows="1"
              >
                foo
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col right-col position-relative"
      >
        <label
          class="switch"
        >
          <input
            checked=""
            readonly=""
            type="checkbox"
          />
          <div
            class="slider"
          />
        </label>
        <div
          class="confirmation-popover"
          id="rule-toggle-1"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="full-width"
      >
        <form
          class=""
          id="rule-form-1"
        >
          <div
            class="mb-1 form-group"
          >
            <div
              class="when-container"
            >
              <div
                class="when-btn"
              >
                WHEN
              </div>
              <div
                class="MultiSelectField when-events"
              >
                <div
                  class="select MultiSelectFieldOpts"
                >
                  <span
                    class="tag badge badge-secondary"
                    style="color: rgb(2, 117, 216);"
                  >
                    <span>
                      <span
                        class="badgeText"
                      >
                        ticket created
                      </span>
                      <i
                        class="material-icons ml-1 badgeClose"
                      >
                        close
                      </i>
                    </span>
                  </span>
                  <div
                    class="input-container"
                  >
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                        data-toggle="dropdown"
                      >
                        <input
                          class="input ml-2"
                          placeholder="Add events..."
                          value=""
                        />
                      </div>
                      <div
                        aria-hidden="true"
                        class="options dropdown-menu"
                        role="menu"
                        tabindex="-1"
                      >
                        <button
                          class="option option--focused dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            ticket updated
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            ticket assigned to user
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            ticket snooze delay ends
                          </span>
                        </button>
                        <button
                          class="option dropdown-item"
                          role="menuitem"
                          tabindex="0"
                          type="button"
                        >
                          <span>
                            new message in ticket
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Program-wrapper"
            >
              <div
                class="consequent"
              >
                <span
                  class=""
                >
                  <div
                    class="btn-group"
                    style="padding-left: 59px;"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="ControlStructureButton dropdown-toggle btn btn-secondary"
                      type="button"
                    >
                      THEN
                    </button>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        Action
                      </button>
                      <button
                        class="dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        "IF" statement
                      </button>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="buttons-container"
      >
        <div>
          <button
            class="btn btn-success"
            form="rule-form-1"
            id="rule-item-save-1"
            type="submit"
          >
            Save rule
          </button>
          <button
            class="ml-3 btn btn-secondary"
            id="rule-item-duplicate-1"
            type="submit"
          >
            Duplicate rule
          </button>
          <div
            class="component d-inline-block ml-3"
            id="rule-item-discard-1"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-discard-1"
              type="button"
            >
              Discard changes
            </button>
          </div>
        </div>
        <div>
          <div
            class="component d-inline-block ml-2 delete-button"
            id="rule-item-delete-1"
          >
            <button
              class="btn btn-secondary"
              id="confirm-button-rule-item-delete-1"
              type="button"
            >
              <i
                class="material-icons"
              >
                delete
              </i>
              Delete rule
            </button>
          </div>
        </div>
      </div>
    </div>
  </td>
</tr>
`;
